added: docker compose, swagger, golang migrate
