# docs/swagger/swagger.json
@@ -38,7 +38,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_deliveries_http_delivery.AuthRequest"
+                            "$ref": "#/definitions/golangproject_pkg_reqresp.AuthRequest"
                         }
                     }
                 ],
@@ -46,7 +46,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_deliveries_http_delivery.AuthResponse"
+                            "$ref": "#/definitions/golangproject_pkg_reqresp.AuthResponse"
                         }
                     },
                     "400": {
@@ -72,16 +72,7 @@
         }
     },
     "definitions": {
-        "golangproject_pkg_reqresp.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string",
-                    "example": "error message"
-                }
-            }
-        },
-        "internal_deliveries_http_delivery.AuthRequest": {
+        "golangproject_pkg_reqresp.AuthRequest": {
             "type": "object",
             "properties": {
                 "email": {
@@ -92,11 +83,21 @@
                 }
             }
         },
-        "internal_deliveries_http_delivery.AuthResponse": {
+        "golangproject_pkg_reqresp.AuthResponse": {
             "type": "object",
             "properties": {
                 "token": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+                }
+            }
+        },
+        "golangproject_pkg_reqresp.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "error message"
                 }
             }
         }
